--- a/Slides-Files/Slides/02-LOT-MathCommands_text.tex
+++ b/Slides-Files/Slides/02-LOT-MathCommands_text.tex
@@ -47,12 +47,12 @@
 
 %% Contents slide
 \frame{
-\begin{multicols}{2}
+%\begin{multicols}{2}
 	\frametitle{Contents}
 %	\tableofcontents[hideallsubsections]
 	\tableofcontents
 	%[pausesections]
-\end{multicols}
+%\end{multicols}
 	}
 
 
@@ -90,10 +90,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Math mode 1}
 \frame{
-	\begin{multicols}{2}
+%	\begin{multicols}{2}
 		\frametitle{~}
 		\tableofcontents[currentsection,hideallsubsections]
-	\end{multicols}
+%	\end{multicols}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -279,9 +279,9 @@ Math packages from the American Mathematical Society (AMS)
 \section{Customizing your commands}
 \frame{
 	\frametitle{~}
-	\begin{multicols}{2}
+%	\begin{multicols}{2}
 		\tableofcontents[currentsection,hideallsubsections]
-	\end{multicols}
+%	\end{multicols}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
