--- a/Slides-Files/Slides/03-LOT-FigTabFloat_master.tex
+++ b/Slides-Files/Slides/03-LOT-FigTabFloat_master.tex
@@ -22,10 +22,10 @@
 
 \begin{document}
 
-%\togglefalse{handout}
-\toggletrue{handout}
+\togglefalse{handout}
+%\toggletrue{handout}
 
-\input{02-LaTeX_text}
+\input{03-LOT-FigTabFloat_text}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
