--- a/Slides-Files/Slides/03-LOT-FigTabFloat_text.tex
+++ b/Slides-Files/Slides/03-LOT-FigTabFloat_text.tex
@@ -47,12 +47,12 @@
 
 %% Contents slide
 \frame{
-\begin{multicols}{2}
+%\begin{multicols}{2}
 	\frametitle{Contents}
 %	\tableofcontents[hideallsubsections]
 	\tableofcontents
 	%[pausesections]
-\end{multicols}
+%\end{multicols}
 	}
 
 
@@ -90,10 +90,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Graphics}
 \frame{
-\begin{multicols}{2}
+%\begin{multicols}{2}
 \frametitle{~}
 	\tableofcontents[currentsection,hideallsubsections]
-\end{multicols}
+%\end{multicols}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -256,9 +256,9 @@ and follow the instructions of the first \textbf{three blocks} in your \texttt{.
 \section{Tables}
 \frame{
 %\frametitle{~}
-\begin{multicols}{2}
+%\begin{multicols}{2}
 	\tableofcontents[currentsection,hideallsubsections]
-\end{multicols}
+%\end{multicols}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -706,9 +706,9 @@ The package
 \section{Floating environments}
 \frame{
 	%\frametitle{~}
-	\begin{multicols}{2}
+%	\begin{multicols}{2}
 		\tableofcontents[currentsection,hideallsubsections]
-	\end{multicols}
+%	\end{multicols}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
