--- a/Slides-Files/Slides/04-LOT-BibTeX_master.tex
+++ b/Slides-Files/Slides/04-LOT-BibTeX_master.tex
@@ -25,7 +25,7 @@
 \togglefalse{handout}
 %\toggletrue{handout}
 
-\input{01-LaTeX01_text}
+\input{04-LOT-BibTeX_text}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -38,7 +38,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Links \& other sources}
+\section{Quellen}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -48,31 +48,43 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Links \& other sources}
+\frametitle{Quellen}
 
 {\footnotesize
 	
 	\begin{itemize}
-		%	\item \DWDS{1} \url{https://www.dwds.de/r?h=1&from=&corpus=kern&q=von+uns+gehen} \\
-		%	{[}Zugriff: 10.04.2017]; Treffer aus: \citep[202]{Becker69a} 
-		%	
+		\item Link: Bib\TeX\ -- Wikipedia (German)\\
+		\url{https://de.wikipedia.org/wiki/BibTeX}\\
+		{[}Zugriff: 23.10.2017]
 		
-		\item Grafik: File Extensions -- xkcd, A webcomic of romance, sarcasm, math, and language\\
-		\url{https://xkcd.com/1301/} \\
+		\item Link: Bib\TeX\ -- Wikipedia (English)\\
+		\url{https://en.wikipedia.org/wiki/BibTeX}\\
+		{[}Zugriff: 11.01.2019]
+		
+		\item Link: Bib\TeX .org\\
+		\url{http://www.bibtex.org}\\
+		{[}Zugriff: 23.10.2017]
+		
+		\item Link: Creating and Managing Bibliographies with Bib\TeX\ on Overleaf -- (Lian Tze Lim)\\
+		\url{https://www.overleaf.com/blog/532-creating-and-managing-bibliographies-with-bibtex-on-overleaf}\\
+		{[}Zugriff: 28.11.2017]
+		
+		\item Paket: \ltxpack{natbib} -- Flexible bibliography support.\\
+		\url{https://ctan.org/pkg/natbib}\\
+		{[}Zugriff: 23.10.2017]
+		
+		\item Twitter: \TeX\ tips\\
+		\url{https://twitter.com/textip} \\
 		{[}Zugriff: 10.04.2017]
+		
+		\item YouTube-Tutorial: \LaTeX\ Tutorial\\
+		\url{https://www.youtube.com/channel/UCC-3dzj6dfbWwGzQzhkUS5A}\\
+		{[}Zugriff: 23.10.2017]
 		
 		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
 		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
 		{[}Zugriff: 10.10.2017]
 
-		\item Link: KOMA-Script.\\
-		\url{https://www.komascript.de/}\\
-		{[}Zugriff: 02.01.2019]
-
-		\item Link: Overleaf.\\
-		\url{https://www.overleaf.com}\\
-		{[}Zugriff: 02.01.2019]
-		
 		\item Link: \LaTeX /Special Characters.\\
 		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
 		{[}Zugriff: 02.01.2019]
@@ -81,14 +93,6 @@
 		\url{http://www.ctan.org/}\\
 		{[}Zugriff: 02.01.2019]
 
-		\item Software: \ltxpack{MiKTeX}\\
-		\url{https://miktex.org/} \\
-		{[}Zugriff: 10.04.2017]
-		
-		\item Software: \ltxpack{TeXstudio}\\
-		\url{https://www.texstudio.org/} \\
-		{[}Zugriff: 10.04.2017]
-		
 %		\item Grafik: Kontextuelle Bedeutung: Wrong Hands -- John Atkinson, \url{http://wronghands1.tumblr.com/post/157354512780} \\
 %		{[}Zugriff: 23.01.2017]
 %		
@@ -113,7 +117,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Literature}
+\section{Literatur}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -123,7 +127,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Literature}
+\frametitle{Literatur}
 
 	%German
 %	\bibliographystyle{../../texfiles-beamer/deChicagoMyP}
