--- a/Slides-Files/Slides/01-LOT-Basics_master.tex
+++ b/Slides-Files/Slides/01-LOT-Basics_master.tex
@@ -25,7 +25,7 @@
 \togglefalse{handout}
 %\toggletrue{handout}
 
-\input{03-LaTeX_text}
+\input{01-LOT-Basics_text}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -38,7 +38,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Quellen}
+\section{Links \& other sources}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -48,7 +48,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Quellen}
+\frametitle{Links \& other sources}
 
 {\footnotesize
 	
@@ -65,6 +65,14 @@
 		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
 		{[}Zugriff: 10.10.2017]
 
+		\item Link: KOMA-Script.\\
+		\url{https://www.komascript.de/}\\
+		{[}Zugriff: 02.01.2019]
+
+		\item Link: Overleaf.\\
+		\url{https://www.overleaf.com}\\
+		{[}Zugriff: 02.01.2019]
+		
 		\item Link: \LaTeX /Special Characters.\\
 		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
 		{[}Zugriff: 02.01.2019]
@@ -105,7 +113,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Literatur}
+\section{Literature}
 %\frame{
 %\begin{multicols}{2}
 %\frametitle{~}
@@ -115,7 +123,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]
-\frametitle{Literatur}
+\frametitle{Literature}
 
 	%German
 %	\bibliographystyle{../../texfiles-beamer/deChicagoMyP}
